# dunedaqdal

./: CMakeLists.txt
apps/: list_apps.cxx
docs/: README.md
include/dunedaqdal/: disabled-components.hpp  util.hpp
pybindsrc/: dal_methods.cpp  module.cpp
python/dunedaqdal/: __init__.py
schema/dunedaqdal/: dunedaq.schema.xml
scripts/: app_environment.py
src/: dalMethods.cpp  dalMethods.cxx  disabled-components.cpp  test_circular_dependency.cpp  test_circular_dependency.hpp
test/apps/: disable_test.cxx
